**pnp-0.6.4 ??/??/2010**

  * Update: jQuery Update to 1.4.2
  * Update: jQuery-ui Update to 1.8
  * Feature: New configure Option --with-base-url
  * Template: New template check_ntp_time.php (Mathias Kettner)

**pnp-0.6.3 03/16/2010**

  * Feature: New helper script libexec/rrd_convert.pl -> [[rrd_convert]]
  * Bugfix: Ignore old XML files while building the service list
  * Template: New template check_hpasm.php
  * Bugfix: Installer now checks for json_decode()
  * Workaround: Allow "trailing unfilled semicolons". Workaround for nsclient++
  * Template: Updates for check_openmanage.php, check_hp_bladecenter.php and check_dell_baldecenter.php ( Trond Hasle Amundsen )"

**pnp-0.6.2 12/23/2009**

  * Feature: XML_WRITE_DELAY option added to process_perfdata.cfg as suggested by Mathias Kettner
  * Feature: New template integer.php 
  * Update: FPDI update to 1.3.1
  * Feature: PNP will now work with [[http://http://www.lighttpd.net|lighttpd]] and php-cgi
  * Template: check_mk-ps.perf.php added ( by Mathias Kettner )
  * Feature: PNP will now work without mod_rewrite -> [[webfe]] 
  * Bugfix: Wrong pdf link used on site 'pages' and 'basket'
  * Bugfix: Incorrect group permissions on spool directory

**pnp-0.6.1 11/22/2009**

  * Feature: RRD heartbeat per check_command -> [[tpl_custom]] 
  * Feature: New config.php option pdf_graph_opt 
  * Feature: Recognize the 'background_pdf' option in page definitions -> [[pages]]
  * Feature: Recognize the 'source' option in page definitions -> [[pages]]
  * Feature: Array $TIMERANGE now available for templates -> [[timeranges]]
  * Bugfix:  ./configure --sysconfdir no longer ignored
  * Feature: Store internal runtime statistics on a per minute base 
  * Feature: Added two widgets views/widget_menu.php and views/widget_graph.php 

**pnp-0.6.0 10/30/2009**

  * Webfrontend based on [[http://www.kohanaphp.com|Kohana]]
  * Webfrontend based on [[http://jqueryui.com/themeroller/|jQuery Themes]]