@@ -46,6 +46,7 @@ Silvan Hunkirchen - Bugreport
 Petr Maizner - Bugreport
 Steve Finkelstein - Bugreport
 Mathias Kettner - xml write delay
+Yannig Parre - i18n fr_FR
 
 ###########################################
 #           NPCD Thanks                   #
