@@ -1,0 +1,33 @@
+<?php defined('SYSPATH') OR die('No direct access allowed.');
+$lang = array
+(
+    'datasource' => 'Source de données : %s',
+    'host' => 'Machine : %s',
+    'service' => 'Service : %s',
+    'page' => 'Page : %s',
+    'page-basket' => 'Page : Panier',
+    'zoom-header' => 'Zoom',
+    'status-box-header' => 'État',
+    'search-box-header' => 'Recherche',
+    'icon-box-header' => 'Actions',
+    'basket-box-header' => 'Mon panier',
+    'timerange-box-header' => 'Plage de temps',
+    'service-box-header' => 'Services',
+    'pages-box-header' => 'Pages',
+    'nagios-summary-link-title' => 'Alarmes les plus récentes dans cette plage de temps',
+    'nagios-avail-link-title'   => 'Disponibilité de Nagios pendant cette plage de temps',
+    'timerange-selector-legend' => 'Selectionner une plage de temps',
+    'timerange-selector-title'  => 'Selectionner une plage de temps',
+    'timerange-selector-submit-button' => 'lancer',
+    'timerange-selector-clear-button'  => 'effacer',
+    'timerange-selector-link'          => 'Plage de temps personnalisée',
+	'start' => 'Début',
+	'end' => 'Fin',
+    'service-details' => 'Détails du service',
+    'service-overview' => 'Aperçu du service sur "%s"',
+	'title-pages-link' => 'Voir la page',
+	'title-pdf-link' => 'Extraction PDF',
+	'title-xml-link' => 'Extraction XML',
+	'title-statistics-link' => 'Voir statistiques internes sur PNP',
+	'title-calendar-link' => 'Définir une plage de temps',
+);
